yaml/backend-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: backend-app
  labels:
    app: backend
spec:
  replicas: 2
  selector:
    matchLabels:
      app: backend
  template:
    metadata:
      labels:
        app: backend
    spec:
      containers:
        - image: <your_dockerhub_username>/<your_dockerhub_repo_name>:latest
          name: backend
          ports:
            - containerPort: 8000
              name: gunicorn
